fixed issue with dark mode on home page.

--- a/my-app/src/styles/about.css
+++ b/my-app/src/styles/about.css
@@ -1,4 +1,4 @@
-*{
+.about-container{
     margin:0;
     padding:0;
     box-sizing: border-box;
@@ -11,10 +11,15 @@
     color:inherit;
   }
 
-
-
-
   .about-container,.about-dark{
     border-color: black;
     color: white;
+}
+
+P{
+  color: black;
+}
+
+h1{
+  color: black;
 }
