--- a/my-app/src/styles/header.css
+++ b/my-app/src/styles/header.css
@@ -1,7 +1,7 @@
 
 .header-container{
     background-color: rgb(102, 92, 171);
-    height:40px;
+    height:50px;
     padding:0 20px;
     display: flex;
     align-items: center;
