--- a/my-app/src/styles/home.css
+++ b/my-app/src/styles/home.css
@@ -1,7 +1,7 @@
 
 .home-container h1{
     text-align: center;
-    margin-bottom:40px;
+    margin-bottom:10px;
  }
  .characters-container{
      display: flex;
