--- a/my-app/src/styles/search.css
+++ b/my-app/src/styles/search.css
@@ -1,6 +1,6 @@
 .search-container{
     margin:20px;
-    height:60px;
+    height:90px;
     display: flex;
     align-items: center;
     justify-content: center;
